2001-10-18  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, gnome-panel-properties.c,
	* panel_config_global.h, session.c: Remove 'simple_movement' and
	  opt for the slightly more complicated sin() algorithm as default.

2001-10-18  Mark McLoughlin <mark@skynet.ie>

	* main.h, main.c (panel_main_gconf_client): impl.

	* foobar-widget.c (pixmap_menu_item_new): port from 
	gnome_preferences_* to gconf.
	(add_tearoff): ditto.

	* tearoffitem.c (tearoff_item_new): ditto.

	* menu.c (menu_add_tearoff): impl to use gconf.
	(add_tearoff): kill.
	(submenu_to_display): use menu_add_tearoff.
	(start_favourites_menu): ditto.
	(create_menu_at_fr): ditto.
	(create_add_panel_submenu): ditto.
	(make_panel_submenu): ditto.
	(create_panel_submenu): ditto.
	(create_desktop_menu): ditto.
	(create_root_menu): ditto.

2001-10-18  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, gnome-panel-properties.c, 
	* panel-widget.c, panel-widget.h, panel_config_global.h,
	* session.c, session.h: Remove 'auto_hide_step_size', 
	  'explicit_hide_step_size' and 'drawer_hide_step_size' and replace
	  for a single configuration 'hiding_step_size' for all 

2001-10-18  Glynn Foster  <glynn.foster@sun.com>

	* button-widget.c, gnome-panel-properties.c:
	* panel_config_global.h, session.c:  Remove fast_button_scaling
	  and use GDK_INTERP_HYPER as default instead.

2001-10-18  Glynn Foster <glynn.foster@sun.com> 

	* basep-widget.c, foobar-widget.c, gnome-panel-properties.c
	  menu.c, panel-widget.c, panel-widget.h, panel.c
	  panel_config_global.h,  session.c: Removed the applet_padding
          and applet_padding_border global properties and consequently
	  the no_padding_ends param on panel_widget_new

2001-10-12  Alex Larsson  <alexl@redhat.com>

	* panel_config.c (panel_config):
	un-ifdef out this function. Seems to work reasonably well
	already.

2001-10-12  Alex Larsson  <alexl@redhat.com>

	* main.c (kill_free_drawers):
	Queue up all the destroys until after we've gone through